Create  redirection page

--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <html>
   <head>
-    <title>FireInsidE's abode</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Space Highway</title>
   </head>
 
   <body>
-    <header>
+    <h1>Welcome! Where will we take you today?</h1>
 
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
+    <a href="abode.html">FireInsidE's abode</a>
   </body>
 </html>
