Add specific stylesheets for each page and a uni one

--- a/abode.html
+++ b/abode.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>FireInsidE's abode</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./resources/style.css">  <!-- Universal style -->
+    <link rel="stylesheet" href="./resources/test.css">  <!-- Specific abode style -->
   </head>
 
   <body>
