Lots of styling progress

--- a/abode.html
+++ b/abode.html
@@ -3,22 +3,22 @@
   <head>
     <title>FireInsidE's abode</title>
     <link rel="stylesheet" href="./resources/style.css">  <!-- Universal style -->
-    <link rel="stylesheet" href="./resources/test.css">  <!-- Specific abode style -->
+    <link rel="stylesheet" href="./resources/abode.css">  <!-- Specific abode style -->
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet"> <!-- Chakra Petch font -->
   </head>
 
   <body>
     <header>
-      <a href="index.html">Travel</a>
+      <a href="index.html">Travel</a><br>
+      <h1>FireInsidE's abode</h1>
     </header>
 
     <main>
-      <h1>FireInsidE's abode</h1>
-
-      
+      <p>"Welcome, welcome! Make yourself comfortable here, or feel free to take a look around!"</p>
     </main>
 
     <footer>
-
+      © Etan Stettler
     </footer>
   </body>
 </html>
