--- a/abode.html
+++ b/abode.html
@@ -9,12 +9,58 @@
 
   <body>
     <header>
-      <a href="index.html">Travel</a><br>
       <h1>FireInsidE's abode</h1>
+
+      <nav>
+        <ul>
+          <li><a href="index.html">Explore</a></li>
+          <li><a href="#who-am-i">Identity</a></li>
+          <li><a href="#hobbies">Hobbies</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-      <p>"Welcome, welcome! Make yourself comfortable here, or feel free to take a look around!"</p>
+      <div id="who-am-i">
+        <h2>Who's FireInsidE?</h2>
+
+        <p>I am a student based in switzerland that aims to become an independant web developer one day.</p>
+      </div>
+
+      <div id="hobbies">
+        <h2>My hobbies</h2>
+
+        <p>I like a lot of things in life, but you can find some of these below :</p>
+
+        <div id="hobby-videogames">
+          <h3>Video Games</h3>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+        </div>
+
+        <div id="hobby-pixelart">
+          <h3>Pixelart</h3>
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </p>
+        </div>
+      </div>
+
+      <div id="skills">
+        <h2>Skills</h2>
+
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </div>
+
+      <div id="projects">
+        <h2>Some of my projects</h2>
+
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </div>
     </main>
 
     <footer>
