--- a/abode.html
+++ b/abode.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <title>FireInsidE's abode</title>
-    <link rel="stylesheet" href="./resources/style.css">  <!-- Universal style -->
-    <link rel="stylesheet" href="./resources/abode.css">  <!-- Specific abode style -->
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet"> <!-- Chakra Petch font -->
+    <link rel="stylesheet" href="./resources/abode.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
   </head>
 
   <body>
