--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,7 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>FireInsidE's abode</title>
+    <link rel="stylesheet" href="resources/contact.css">
+  </head>
+</html>
