--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FireInsidE's abode</title>
-    <link rel="stylesheet" href="./resources/abode.css">
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
+    <title>Space Highway</title>
   </head>
 
   <body>
-    <header>
-      <h1>FireInsidE's abode</h1>
+    <h1>Welcome! Where will we take you today?</h1>
 
-      <nav>
-
-      </nav>
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-      © Etan Stettler
-    </footer>
+    <a href="abode.html">FireInsidE's abode</a>
   </body>
 </html>
