Add introduction and font-family styling

--- a/abode.html
+++ b/abode.html
@@ -16,7 +16,15 @@
     </header>
 
     <main>
+      <div id="introduction">
+        <p>
+          Welcome! Here you will find (almost) all relevant information you will ever need
+          about FireInsidE, also known as Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
 
+          "Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
+          Some of my current interests include web programming, pixel art and streaming!"
+        </p>
+      </div>
     </main>
 
     <footer>
