--- a/abode.html
+++ b/abode.html
@@ -18,17 +18,24 @@
     <main>
       <div id="introduction">
         <p>
-          Welcome! Here you will find (almost) all relevant information you will ever need
-          about FireInsidE, also known as Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
+          "Welcome! Here you will find (almost) all relevant information you will ever need
+          about FireInsidE, also known as Aisling Fontaine, or, more professionally, as Etan Stettler."<br><br>
 
-          "Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
-          Some of my current interests include web programming, pixel art and streaming!"
+          Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
+          Some of my current interests include web programming, pixel art and streaming!
+        </p>
+      </div>
+
+      <div id="skills">
+        <h2>My skills</h2>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
       </div>
     </main>
 
     <footer>
-      © Etan Stettler
+      ~fie | Etan Stettler
     </footer>
   </body>
 </html>
