--- a/abode.html
+++ b/abode.html
@@ -18,11 +18,13 @@
     <main>
       <div id="introduction">
         <p>
-          "Welcome! Here you will find (almost) all relevant information you will ever need
-          about FireInsidE, also known as Aisling Fontaine, or, more professionally, as Etan Stettler."<br><br>
+          Welcome! Here you will find (almost) all relevant information you will ever need
+          about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler."<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
-          Some of my current interests include web programming, pixel art and streaming!
+          Some of my current interests include web programming, pixel art and streaming! I love to adapt
+          to new themes, environments and more! I specifically enjoy learning anything about computers, 
+          as they have passionned me since I was little.
         </p>
       </div>
 
