--- a/abode.html
+++ b/abode.html
@@ -34,6 +34,16 @@
           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
       </div>
+
+      <div id="working-on">
+        <h2>What I've been up to</h2>
+        <ul>
+          <li>Learning full-stack web development on CodeCademy</li>
+          <li>Learning pixel art (check out my <a href="https://twitter.com/FireInsidE_fie">Twitter</a>)</li>
+          <li>Playing video games, obviously</li>
+          <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+        </ul>
+      </div>
     </main>
 
     <footer>
