Add nav and side margins

--- a/abode.html
+++ b/abode.html
@@ -11,7 +11,9 @@
       <h1>FireInsidE's abode</h1>
 
       <nav>
-
+        <ul>
+          <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -39,7 +41,8 @@
         <h2>What I've been up to</h2>
         <ul>
           <li>Learning full-stack web development on CodeCademy</li>
-          <li>Learning pixel art (check out my <a href="https://twitter.com/FireInsidE_fie">Twitter</a>)</li>
+          <li>Learning to make games on Unity</li>
+          <li>Learning pixel art (check out my Twitter)</li>
           <li>Playing video games, obviously</li>
           <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
         </ul>
@@ -47,7 +50,7 @@
     </main>
 
     <footer>
-      ~fie | Etan Stettler
+      ~fie | Faille. Studios | Etan Stettler
     </footer>
   </body>
 </html>
