Move links to index

--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
   <head>
     <title>Space Highway</title>
+    <link rel="stylesheet" href="./resources/abode.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
   </head>
 
   <body>
     <h1>Welcome! Where will we take you today?</h1>
 
-    <a href="abode.html">FireInsidE's abode</a>
+    <nav>
+      <ul>
+        <li><a href="abode.html">FireInsidE's abode</a></li>
+        <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
+        <h3>Instagram projects</h3>
+        <li><a></a></li>
+        <li><a></a></li>
+        <li><a></a></li>
+      </ul>
+    </nav>
   </body>
 </html>
