--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <ul>
         <li><a href="abode.html">FireInsidE's abode</a></li>
         <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
-        <h3>Instagram projects</h3>
-        <li><a></a></li>
-        <li><a></a></li>
-        <li><a></a></li>
+        <h2>Instagram projects</h3>
+        <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
+        <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
+        <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE</a></li>
       </ul>
     </nav>
   </body>
