--- a/abode.html
+++ b/abode.html
@@ -13,6 +13,8 @@
 
     <main>
       <div id="introduction">
+        <a href="./index.html">Back to the spaceway</a>
+
         <p>
           Welcome! Here you will find (almost) all relevant information you will ever need
           about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler."<br><br>
