--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <ul>
         <li><a href="abode.html">FireInsidE's abode</a></li>
         <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
+        <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
+        <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
+        <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+        <li><a href="mailto:stettler.etan@protonmail.com">E-mail</a></li>
         <h3>Instagram projects</h3>
         <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
         <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
