Begin adding skills

--- a/abode.html
+++ b/abode.html
@@ -17,7 +17,7 @@
 
         <p>
           Welcome! Here you will find (almost) all relevant information you will ever need
-          about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler."<br><br>
+          about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
@@ -29,16 +29,26 @@
       <div id="skills">
         <h2>My skills</h2>
         <p>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          I love learning new things, so whenever I encounter something new that sounds exciting to me,
+          I might add it here!
         </p>
+
+        <ul>
+          <li>
+            <strong>Front-end web development :</strong> I am able to make a simple website 
+          (in fact, this was entirely created by yours truly!) using <em>HTML, CSS and Javascript</em>.
+          </li>
+          <li></li>
+
+        </ul>
       </div>
 
       <div id="working-on">
         <h2>What I've been up to</h2>
         <ul>
           <li>Learning full-stack web development on CodeCademy</li>
-          <li>Learning to make games on Unity</li>
-          <li>Learning pixel art (check out my Twitter)</li>
+          <li>Learning to make games using Unity</li>
+          <li>Learning pixel art (check out my <a href="https://twitter.com/Fireinside_fie">Twitter</a>!)</li>
           <li>Playing video games, obviously</li>
           <li>Trying out live streaming on <a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
         </ul>
