--- a/abode-fr.html
+++ b/abode-fr.html
@@ -8,16 +8,17 @@
 
   <body>
     <header>
-      <h1>FireInsidE's abode</h1>
+      <h1>Le domaine de FIE</h1>
     </header>
 
     <main>
       <div id="introduction">
-        <a href="./index.html">Back to the spaceway</a>
+        <a href="./index.html">Retourner au hub spatial</a>
 
         <p>
-          Welcome! Here you will find (almost) all relevant information you will ever need
-          about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
+          Bienvenue! Ici, vous pourrez trouver presque toutes les informations importantes
+          me concernant, FireInsidE, aussi connu sous l'alias d'Aisling Fontaine, ou, plus professionnellement,
+          comme Etan Stettler.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
