Focusing on the english version now

--- a/abode-fr.html
+++ b/abode-fr.html
@@ -39,8 +39,8 @@
             <strong>Front-end web development :</strong> I am able to make a simple website 
           (in fact, this was entirely created by yours truly!) using <em>HTML, CSS and Javascript</em>.
           </li>
-          <li></li>
-
+          <li><strong>Unity :</strong> I can navigate the Unity interface and understand some of 
+          the basic functions of the engine.</li>
         </ul>
       </div>
 
