Add background color on marginsa nd other things

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav>
       <ul>
-        <li><a href="abode-en.html">FIE's abode</a> | <a href="abode-fr.html">Le domaine de FIE</a></li>
+        <li><a href="abode-en.html">[EN] - FIE's abodE</a> | <a href="abode-fr.html">[FR] - Le domaine de FIE</a></li>
         <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
         <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
         <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
