--- a/abode-en.html
+++ b/abode-en.html
@@ -16,7 +16,7 @@
       <div id="introduction">
         <p>
           Welcome! Here you will find (almost) all relevant information you will ever need
-          about me, FireInsidE, known as Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
+          about me, FireInsidE, alias Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
@@ -34,12 +34,15 @@
 
         <ul>
           <li>
-            <strong>Front-end web development :</strong> I am able to make a simple website 
-            (in fact, this was entirely created by yours truly!) using <em>HTML, CSS and Javascript</em>.
+            <strong>Front-end web development :</strong><br>
+            I am able to make a simple website 
+            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>.
           </li>
           <li>
-            <strong>Unity :</strong> I can navigate the Unity interface and understand some of 
-            the basic functions of the engine.
+            <strong>Unity :</strong><br>
+            I can navigate the Unity interface and understand some of 
+            the basic functions of the engine.<br>
+            I can implement player controls and basic physics. 
           </li>
         </ul>
       </div>
