--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Space Highway</title>
-    <link rel="stylesheet" href="./resources/abode.css">
+    <link rel="stylesheet" href="./resources/spaceway.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
   </head>
 
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <li><a href="abode-en.html">FIE's abodE</a></li>
-        <li><a href="vault.html">FIE's vault</a></li>
         <h2>External links</h2>
+        <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
         <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
         <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
         <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
