Adds the links menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
   <body>
     <header>
       <h1>FIE's abode</h1>
-      <a href="./index.html">Back to the spaceway</a>
+      <img src="">
+
+      <div id="links">
+        <ul>
+          <li><a href="abode-en.html">FIE's abodE</a></li>
+          <h2>External links</h2>
+          <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
+          <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
+          <li><a href="https://instagram.com/fireinside_fie">Instagram</a></li>
+          <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
+          <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
+          <li><a href="mailto:stettler.etan@protonmail.com">E-mail</a></li>
+          <h3>Instagram projects</h3>
+          <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
+          <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
+          <li><a href="https://www.instagram.com/fireoutside.fie/">FireOutsidE</a></li>
+        </ul>
+      </div>
     </header>
 
     <main>
