--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <header>
       <h1>FIE's abode</h1>
-      <img src="">
+      <div id="hamburger-menu">
+        <script></script>
+      </div>
 
       <div id="links">
         <ul>
-          <li><a href="abode-en.html">FIE's abodE</a></li>
-
           <h2>External links</h2>
           <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
           <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
@@ -22,7 +22,7 @@
           <li><a href="https://open.spotify.com/user/wlqys33u1f91ryze5fv0ocvx4?si=137492d1823c4826">Spotify</a></li>
           <li><a href="https://twitch.tv/FireInsidE_fie">Twitch</a></li>
           <li><a href="mailto:stettler.etan@protonmail.com">E-mail</a></li>
-          
+
           <h3>Instagram projects</h3>
           <li><a href="https://www.instagram.com/drawin.at.the.campfire/">Drawin' at the Campfire [EN] (On hold)</a></li>
           <li><a href="https://www.instagram.com/shooting.firestar/">Shooting FireStar [EN] (On hold)</a></li>
