--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <header>
       <h1>FIE's abode</h1>
-      <div id="hamburger-menu">
-        <script></script>
-      </div>
+
+      <input id="menu-toggle" type="checkbox" />
 
       <div id="links">
         <ul>
