First attempt at hamburger script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>FIE's abode</h1>
 
       <input id="menu-toggle" type="checkbox" />
+      <label for="menu-toggle"></label>
 
       <div id="links">
         <ul>
