Add script to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
       <input id="menu-toggle" type="checkbox" />
       <label for="menu-toggle"></label>
+      <script src="./links.js"></script>
 
       <div id="links">
         <ul>
