Still no reason

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <header>
       <h1>FIE's abode</h1>
 
-      <input id="menu-toggle" type="checkbox" \>
-      <label for="menu-toggle"></label>
+      <label for="menu-toggle">
+        <input id="menu-toggle" type="checkbox" \>
+      </label>
+
       <script src="./links.js">
         const linksElement = document.getElementById('links');
         const hamburgerMenu = document.getElementById('menu-toggle');
+
+        window.alert(`${hamburgerMenu.checked}`);
 
         if (hamburgerMenu.checked) {
           window.alert("Heck yes");
