--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         let linksStyle = getComputedStyle(links);
 
         if (linksStyle.display === "none") {
-          links.style = "display: contents; position: absolute; right: 12%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
+          links.style = "display: block; position: absolute; right: 12%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
         } else {
           links.style = "display: none; position: absolute; right: 12%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
         }
