Update padding and links style

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         let linksStyle = getComputedStyle(links);
 
         if (linksStyle.display === "none") {
-          links.style = "display: block; position: absolute; right: 12%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
+          links.style = "display: block; position: absolute; right: 25%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
         } else {
-          links.style = "display: none; position: absolute; right: 12%; border: 1px gray solid; padding: 10px; background-color: white; width: 600px;";
+          links.style = "display: none;";
         }
       }
     </script>
