--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <body>
     <header>
       <h1>FIE's abode</h1>
-
-      <label for="menu-toggle">
-        <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
-      </label>
+      
+      <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
+      <label for="menu-toggle"></label>
 
       <div id="links">
         <ul>
