Reorganise future hamburger html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>
       <h1>FIE's abode</h1>
       
-      <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
-      <label for="menu-toggle"></label>
-
+      <div id="hamburger-containter">
+        <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
+        <label for="menu-toggle"></label>  
+      </div>
+      
       <div id="links">
         <ul>
           <h2>External links</h2>
