Add contact page base html and css

--- a/contact.html
+++ b/contact.html
@@ -3,5 +3,20 @@
   <head>
     <title>FireInsidE's abode</title>
     <link rel="stylesheet" href="resources/contact.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">   <!-- Chakra Petch font -->
   </head>
+
+  <body>
+    <header>
+      <h1>Contact me</h1>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+  </body>
 </html>
