--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
       <div id="links">
         <ul>
+          <li><a href="./contact.html">Contact me</a></li>
+
           <h2>External links</h2>
           <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
           <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
