Add some text for contact page

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,20 @@
   <body>
     <header>
       <h1>Contact me</h1>
+      <a href="./index.html">Go back</a>
     </header>
 
     <main>
+      <p>
+        You can contact me by e-mail, or, even better, by using any of my social media accounts,
+        even though I prefer Discord and Twitter.
+      </p>
+
+      <ul>
+        <li>My Discord handle : FireInsidE#0777</li>
+        <li>My twitter account : <a href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
+        <li>Contact me via <a href="mailto:stettler.etan@protonmail.com">e-mail</a></li>
+      </ul>
 
     </main>
 
