Hide real name add go back link to contact page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Contact me</h1>
-      <a href="./index.html">Go back</a>
+      <a id="go-back-link" href="./index.html">Go back</a>
     </header>
 
     <main>
@@ -21,13 +21,12 @@
       <ul>
         <li>My Discord handle : FireInsidE#0777</li>
         <li>My twitter account : <a href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
-        <li>Contact me via <a href="mailto:stettler.etan@protonmail.com">e-mail</a></li>
+        <li>Contact me via <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
       </ul>
-
     </main>
 
     <footer>
-
+      ~fie | Faille. Studios | Aisling Fontaine
     </footer>
   </body>
 </html>
