--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div id="introduction">
         <p>
           Welcome! Here you will find (almost) all relevant information you will ever need
-          about me, FireInsidE, alias Aisling Fontaine, or, more professionally, as Etan Stettler.<br><br>
+          about me, FireInsidE or Aisling Fontaine.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
@@ -103,7 +103,7 @@
     </script>
 
     <footer>
-      ~fie | Faille. Studios | Etan Stettler
+      ~fie | Faille. Studios | Aisling Fontaine
     </footer>
   </body>
 </html>
