Add more introduction text

--- a/index.html
+++ b/index.html
@@ -43,13 +43,17 @@
     <main>
       <div id="introduction">
         <p>
-          Welcome! Here you will find (almost) all relevant information you will ever need
-          about me, FireInsidE or Aisling Fontaine.<br><br>
+          Welcome! Here you will find (almost) all relevant information about me, 
+          FireInsidE or Aisling Fontaine.<br><br>
 
           Based in Switzerland, I am a 17 years old student in economics that loves to learn new things.
           Some of my current interests include web programming, pixel art and streaming! I love to adapt
           to new themes, environments and more! I specifically enjoy learning anything about computers, 
-          as they have passionned me since I was little.
+          as they have passionned me since I was little.<br><br>
+
+          I am willing to carve myself a path into the freelance world, mainly in web development! I have
+          also found a big interest into making games using the Unity game engine, and am currently exploring
+          that other possibility!
         </p>
       </div>
 
