--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         let linksStyle = getComputedStyle(links);
 
         if (linksStyle.display === "none") {
-          links.style = "display: block; position: absolute; right: 15%; border: 1px gray solid; padding: 10px; background-color: #f3f3f3ff; width: 600px;";
+          links.style = "display: block; position: absolute; right: 15%; border: 1px gray solid; padding: 10px; color: black; background-color: darkgrey; width: 600px;";
         } else {
           links.style = "display: none;";
         }
