--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
           I am willing to carve myself a path into the freelance world, mainly in web development! I have
           also found a big interest into making games using the Unity game engine, and am currently exploring
-          that other possibility!
+          that other possibility as well! My mind isn't made up yet, so I'm currently doing both on my free time,
+          as my economics studies sadly take most of my time almost every week.
         </p>
       </div>
 
