Begin work on checkbox styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <header>
       <h1>FIE's abode</h1>
       
-      <div id="hamburger-containter">
-        <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
-        <label for="menu-toggle"></label>  
-      </div>
+      <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
+      <label for="menu-toggle"></label>
+      <span id="custom-checkbox"></span>
 
       <div id="links">
         <ul>
