Add hamburger container div, remove excess css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
     <header>
       <h1>FIE's abode</h1>
-      
-      <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
-      <label for="menu-toggle"></label>
-      <span id="custom-checkbox"></span>
+
+      <div id="hamburger-container">
+        <input id="menu-toggle" type="checkbox" onchange="displayLinks()">
+        <label for="menu-toggle"></label>
+        <span id="custom-checkbox"></span>
+      </div>
 
       <div id="links">
         <ul>
