add javascript part of introductin

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
           <li>
             <strong>Front-end web development :</strong><br>
             I am able to make a simple website 
-            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>.
+            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
+            as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
           </li>
           <li>
             <strong>Unity :</strong><br>
