Attempt at making this work

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
 
     <!-- Checkbox script -->
-    <script>
+    <!-- <script>
       const links = document.getElementById("links");
 
       function displayLinks() {
@@ -107,7 +107,7 @@
           links.style = "display: none;";
         }
       }
-    </script>
+    </script> -->
 
     <footer>
       ~fie | Faille. Studios | Aisling Fontaine
