Add details beacons to skills

--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
         </p>
 
         <ul>
-          <li>
-            <strong>Front-end web development :</strong><br>
+          <details>
+            <summary>Front-end web development</summary>
             I am able to make a simple website 
             (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
             as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
-          </li>
-          <li>
-            <strong>Unity :</strong><br>
+          </details>
+          <details>
+            <summary>Unity</summary>
             I can navigate the Unity interface and understand some of 
             the basic functions of the engine.<br>
             I can implement player controls and basic physics. 
-          </li>
+          </details>
         </ul>
       </div>
 
