--- a/index.html
+++ b/index.html
@@ -66,20 +66,24 @@
           I might add it here!
         </p>
 
-        <ul>
-          <details>
-            <summary>Front-end web development</summary>
-            I am able to make a simple website 
-            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
-            as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
-          </details>
-          <details>
-            <summary>Unity</summary>
-            I can navigate the Unity interface and understand some of 
-            the basic functions of the engine.<br>
-            I can implement player controls and basic physics. 
-          </details>
-        </ul>
+        <details id="front-end">
+          <summary>Front-end web development</summary>
+          I am able to make a simple website 
+          (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
+          as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
+        </details>
+
+        <details id="unity">
+          <summary>Unity</summary>
+          I can navigate the Unity interface and understand some of 
+          the basic functions of the engine.<br>
+          I can implement player controls and basic physics. 
+        </details>
+
+        <details id="rust">
+          <summary>Rust</summary>
+          
+        </details>
       </div>
 
       <div id="working-on">
