--- a/index.html
+++ b/index.html
@@ -68,21 +68,27 @@
 
         <details id="front-end">
           <summary>Front-end web development</summary>
-          I am able to make a simple website 
-          (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
-          as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
+          <p>
+            I am able to make a simple website 
+            (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
+            as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
+          </p>
         </details>
 
         <details id="unity">
-          <summary>Unity</summary>
-          I can navigate the Unity interface and understand some of 
-          the basic functions of the engine.<br>
-          I can implement player controls and basic physics. 
+          <summary>Game dev</summary>
+          <p>
+            I can navigate the Unity interface and understand some of 
+            the basic functions of the engine.<br>
+            I can implement player controls and basic physics. 
+          </p>
         </details>
 
         <details id="rust">
           <summary>Rust</summary>
-          
+          <p>
+            I know some basics of using the <a href="https://www.rust-lang.org/">Rust</a> programming language.
+          </p>
         </details>
       </div>
 
@@ -102,13 +108,13 @@
     <script>
       const links = document.getElementById("links");
       const linksStyleOn = `
-      display: block; 
-      position: absolute; 
-      right: 15%; 
-      border: 1px gray solid; 
-      padding: 10px; 
-      color: black; 
-      background-color: darkgrey; 
+      display: block;
+      position: absolute;
+      right: 15%;
+      border: 1px gray solid;
+      padding: 10px;
+      color: black;
+      background-color: darkgrey;
       width: 600px;
       transition: all 0.1s ease-out;
       `
