--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       </p>
 
       <ul>
-        <li>My Discord handle : <em id="discord-handle">FireInsidE#0777</em> <button type="button" onclick="copyText('discord-handle')">Copy!</button></li>
+        <li>My Discord handle : <span id="discord-handle">FireInsidE#0777</span> <button id="copy-discord-handle" type="button" onclick="copyText('discord-handle')">Copy!</button></li>
         <li>My twitter account : <a href="https://twitter.com/FireInsidE_fie">@FireInsidE_fie</a></li>
         <li>Contact me via <a href="mailto:firefoxSpinnie@protonmail.com">e-mail</a></li>
       </ul>
