Add colors to links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="./contact.html">Contact me</a></li>
           </div>
 
-          <div id="links-eternal">
+          <div id="links-external">
             <h2>External links</h2>
             <li><a href="https://github.com/FireInsidE-fie">My Github</a></li>
             <li><a href="https://twitter.com/FireInsidE_fie">Twitter</a></li>
@@ -113,8 +113,7 @@
       right: 15%;
       border: 1px gray solid;
       padding: 10px;
-      color: black;
-      background-color: darkgrey;
+      background-color: #3d3d3d;
       width: 600px;
       transition: all 0.1s ease-out;
       `
