First commit - Add skills intro text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <h2>My skills</h2>
         <p>
           I love learning new things, so whenever I encounter something new that sounds exciting to me,
-          I might add it here!
+          I might add it here!<br>
+          You will also find my public projects down below!
         </p>
 
         <details id="front-end">
