Add portfolio website text

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
             (in fact, this was entirely created by yours truly!) using <em>HTML</em> and <em>CSS</em>, 
             as well as some <em>JavaScript</em> (check out the links in the top right of this web page)!
           </p>
+          <br>
+
+          <strong>Projects :</strong>
+          <ul>
+            <li>
+              <em>This website :</em> 
+              I made this entire website from head to toe! It may not look like much for now (lots of
+              black and white) but I have got big projects for the future of this website. There will
+              be many different things here, ranging from this professional section to mini-games, 
+              a more personal section closed off to most people (might learn some security while I'm
+              at it!) and more!
+            </li>
+          </ul>
         </details>
 
         <details id="unity">
