Add slurp project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
             the basic functions of the engine.<br>
             I can implement player controls and basic physics. 
           </p>
+          <br>
+
+          <strong>Projects :</strong>
+          <ul>
+            <li>
+              <em>Slurp :</em>
+              A very unoriginal game about where you control a ball rolling down an infinite slope. The ball
+              goes faster and faster as the game progresses, and you need to evade obstacles as you roll!
+
+              This is heavily inspired from the Slope web game also using Unity.
+            </li>
+          </ul>
         </details>
 
         <details id="rust">
