Add prototypes text - Minor style changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <strong>Projects :</strong>
           <ul>
             <li>
-              <em>This website :</em> 
+              This website : 
               I made this entire website from head to toe! It may not look like much for now (lots of
               black and white) but I have got big projects for the future of this website. There will
               be many different things here, ranging from this professional section to mini-games, 
@@ -101,11 +101,18 @@
           <strong>Projects :</strong>
           <ul>
             <li>
-              <em>Slurp :</em>
+            <strong>Slurp :</strong>
               A very unoriginal game about where you control a ball rolling down an infinite slope. The ball
               goes faster and faster as the game progresses, and you need to evade obstacles as you roll!
 
               This is heavily inspired from the Slope web game also using Unity.
+            </li>
+
+            <li>
+              <strong>Learning prototypes :</strong>
+              You can find an archive containing all of my prototype unity projects so far <a href="./resources/learning.zip" download="prototypes.zip">here</a>.<br>
+              Disclaimer : NO visual assets (3d models, animation, etc...) were created by me. All of them
+              were provided by Unity through their Unity Learn learning program.
             </li>
           </ul>
         </details>
