Change the link from local to google drive

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <li>
               <strong>Learning prototypes :</strong>
-              You can find an archive containing all of my prototype unity projects so far <a href="./resources/learning.zip" download="prototypes.zip">here</a>.<br>
+              You can find an archive containing all of my prototype unity projects so far <a href="https://drive.google.com/file/d/1flxyftJGrZ8-nb7MXv1WsOJWPYV3RMWC/view?usp=sharing">here</a>.<br>
               Disclaimer : NO visual assets (3d models, animation, etc...) were created by me. All of them
               were provided by Unity through their Unity Learn learning program.
             </li>
