Change link and make it open in a new tab

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <li>
               <strong>Learning prototypes :</strong>
-              You can find an archive containing all of my prototype unity projects so far <a href="https://drive.google.com/file/d/1flxyftJGrZ8-nb7MXv1WsOJWPYV3RMWC/view?usp=sharing">here</a>.<br>
+              You can find an archive containing all of my prototype unity projects so far <a target="_blank" href="https://drive.google.com/file/d/12U8mPM0MHXO76x2BjoFjs6jFg3Ckm62H/view?usp=sharing">here</a>.<br>
               Disclaimer : NO visual assets (3d models, animation, etc...) were created by me. All of them
               were provided by Unity through their Unity Learn learning program.
             </li>
